fix: hero section causing horizontal overflow

--- a/styles/home.css
+++ b/styles/home.css
@@ -5,7 +5,7 @@
   background-repeat: repeat;
   background-size: 175px 175px;
   background-position: center;
-  width: 100vw;
+  width: 100%;
   height: 85vh;
   text-align: center;
   display: flex;
